--- a/environment.yml
+++ b/environment.yml
@@ -1,19 +1,20 @@
-name: tc_env
+name: ssrs_env
 channels:
   - conda-forge
-  - defaults
 dependencies:
-  - elevation=1.0
-  - h5py=2.10
-  - matplotlib=3.1
-  - numpy=1.18
-  - pandas=1.0
-  - pathos=0.2
-  - pip=20.2
-  - python=3.8
-  - rasterio=1.1
-  - scipy=1.4
-  - utm=0.5
+  - python=3.7.10
+  - matplotlib=3.4.3
+  - numpy=1.21.2
+  - scipy=1.7.1
+  - pandas=1.3.2
+  - utm=0.7.0
+  - elevation=1.1.3
+  - h5py=3.4.0
+  - pathos=0.2.8
+  - timezonefinder=5.2.0
+  - rasterio=1.2.6
+  - gdal=3.3.1
+  - pip
   - pip:
-      - h5pyd==0.8
+      - h5pyd==0.8.4
       - astral==2.2
