--- a/environment.yml
+++ b/environment.yml
@@ -2,19 +2,17 @@ name: ssrs_env
 channels:
   - conda-forge
 dependencies:
-  - python=3.7.10
-  - matplotlib=3.4.3
-  - numpy=1.21.2
-  - scipy=1.7.1
-  - pandas=1.3.2
-  - utm=0.7.0
-  - elevation=1.1.3
-  - h5py=3.4.0
-  - pathos=0.2.8
-  - timezonefinder=5.2.0
-  - rasterio=1.2.6
-  - gdal=3.3.1
+  - python>=3.8
+  - matplotlib>=3.4
+  - numpy>=1.21
+  - scipy>=1.7
+  - pandas>=1.3
+  - pathos>=0.2
+  - rasterio>=1.2
+  - elevation>=1.1
+  - h5py>=3.4
+  - timezonefinder>=5.2
   - pip
   - pip:
-      - h5pyd==0.8.4
-      - astral==2.2
+      - h5pyd>=0.8
+      - astral>=2.2
