--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
-name = pyssrs
-version = 0.1.0
+name = ssrs
+version = 0.0.1
 license = BSD 3-Clause License
 license_file = LICENSE.txt
 keywords = 
@@ -23,7 +23,6 @@ classifiers=
     Operating System :: OS Independent
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
-    Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
@@ -38,11 +37,13 @@ install_requires =
         numpy>=1.21
         scipy>=1.7
         pandas>=1.3
-        pathos>=0.2.8
+        pathos>=0.2
         rasterio>=1.2
-        elevation>=1.1.3
+        elevation>=1.1
         h5py>=3.4
         h5pyd>=0.8
-python_requires = >=3.7
+        timezonefinder>=5.2
+        astral>=2.2
+python_requires = >=3.8
 [options.packages.find]
 where = .
