--- a/setup.cfg
+++ b/setup.cfg
@@ -44,6 +44,7 @@ install_requires =
         h5pyd>=0.8
         timezonefinder>=5.2
         astral>=2.2
+        owslib>=0.25
 python_requires = >=3.8
 [options.packages.find]
 where = .
