--- a/environment.yml
+++ b/environment.yml
@@ -2,7 +2,7 @@ name: ssrs_env
 channels:
   - conda-forge
 dependencies:
-  - python>=3.8
+  - python >=3.8
   - matplotlib>=3.4
   - numpy>=1.21
   - scipy>=1.7
@@ -12,6 +12,7 @@ dependencies:
   - elevation>=1.1
   - h5py>=3.4
   - timezonefinder>=5.2
+  - owslib>=0.25
   - pip
   - pip:
       - h5pyd>=0.8
