--- a/setup.cfg
+++ b/setup.cfg
@@ -45,6 +45,7 @@ install_requires =
         timezonefinder>=5.2
         astral>=2.2
         owslib>=0.25
+        richdem>=0.3.4
 python_requires = >=3.8
 [options.packages.find]
 where = .
