Add pip dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -46,6 +46,9 @@ install_requires =
         astral>=2.2
         owslib>=0.25
         richdem>=0.3.4
+        toml>=0.10.2
+        pygrib>=2.1.4
+        herbie-data>=0.0.9
 python_requires = >=3.8
 [options.packages.find]
 where = .
